5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1595_2049.log
== TEST (2019-04-02 13:54:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("valor de x"))
Y = int(input("valor de y"))

print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:55:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("valor de x"))
Y = int(input("valor de y"))

print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:55:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("valor de x"))
Y = int(input("valor de y"))

print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.133415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2049/main.py", line 8, in <module>
    print(y)
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:55:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("valor de x"))
Y = int(input("valor de y"))

print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:56:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("insira o valor de x:"))
Y = int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:56:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("insira o valor de x:"))
Y = int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.193777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2049/main.py", line 8, in <module>
    print(y)
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:56:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("insira o valor de x:"))
Y = int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:56:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("insira o valor de x:"))
Y = int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.159071
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2049/main.py", line 8, in <module>
    print(y)
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:42:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("insira o valor de x:"))
Y= int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:42:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("insira o valor de x:"))
Y= int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.155132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2049/main.py", line 8, in <module>
    print(y)
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:43:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("insira o valor de x:"))
Y= int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:43:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("insira o valor de x:"))
y= int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:43:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x= int(input("insira o valor de x:"))
y= int(input("insira o valor de y:"))

print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.210242
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
